# vibecoding

./: .attdrules.md  .awssecurityrules.md  .behaverc  .cicdrules.md  .flake8  .gitignore  .iamrolerules.md  .refactoringrules.md  .refactoringrules_additions.md  .refactoringrules_merged.md  .windsurfrules.md  ARCHITECTURE.md  CLAUDE.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  feeds_config.json  feeds_config_ai_engineering.json  global_rules.md  pretty.output  pyproject.toml  requirements.txt  run.sh
.github/scripts/: aws_blog_search.py  email_utils.py  feeds.py  models.py  summarize.py  vibe_digest.py
.github/workflows/: security-checks.yml  vibe-coding-digest.yml
docs/: ai_engineering_migration.md  cicd_user_stories.md  prd.md  ses_migration_architecture.md  ses_migration_checklist.md  ses_migration_specification.md  traceability_matrix.md  us004_daily_task_breakdown_spec.md  us004_data_persistence_spec.md  us004_day1_foundation_spec.md  us004_epic_breakdown_spec.md  us_ses_migration_spec.md  user_stories.md  windsurf_rules_workflows_memories.md
infrastructure/: dynamodb.yml  test_backup_recovery.py  test_cloudformation.py  test_dynamodb_setup.py  test_iam_policies.py
scripts/: set_github_secrets.sh
src/: __init__.py  ai_engineering_search.py  aws_blog_search.py  config.py  config_loader.py  email_utils.py  feeds.py  models.py  summarize.py  vibe_digest.py
src/database/: __init__.py  client.py
tests/: test_acceptance.py  test_aws_blog_search.py  test_daily_implementations.py  test_integration.py  test_integration_persistence.py  test_optimizations.py  test_persistence.py  test_persistence_performance.py  test_sample_module.py  test_security_iam.py  test_summarize_script.py  test_vibe_digest.py
tests/features/: daily_tasks.feature  data_persistence.feature  data_persistence_day1.feature  digest_workflow.feature  environment.py  externalized_config.feature
tests/features/steps/: config_steps.py  digest_steps.py  persistence_day1_steps.py
windsurf_workflows/: test_and_lint.yaml
